Start to test the other APIs and solve any issue appear while testing.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=Movie-Reservation
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/movie_db
+spring.datasource.username=fahim
+spring.datasource.password=123456
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+app.jwt.expiration-in-ms=864000000
+app.jwt.secret=w!z%C*F-JaNdRfUjXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjWnZr
+
+omdb.api.key=e254a50c
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
